Feature(article): validating the user Validates the user so that the owner of the article can be the only one to delete Rebase and solving conflict Adding article documentation [Finishes #164489786]
